--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,17 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>iMoney Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <url>https://maven.apache.org</url>
 
     <!-- 依赖库版本配置 -->
     <properties>
         <junit.version>4.13.1</junit.version>
         <servlet.version>4.0.1</servlet.version>
         <mysql.version>8.0.28</mysql.version>
-        <jackson.version>2.12.7.1</jackson.version>
+        <jackson.version>2.17.0</jackson.version>
         <mybatis.version>3.5.6</mybatis.version>
-        <spring.version>6.0.19</spring.version>
+        <!-- spring6 最低版本是 jdk17，所以先不升级 spring版本 -->
+        <spring.version>5.3.19</spring.version>
         <slf4j.version>1.7.25</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <javaee.version>8.0</javaee.version>
@@ -193,7 +194,7 @@
         </dependency>
         <!-- validator -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
