[update][jdbc]: update mysql jdbc connection params.

--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,8 +1,8 @@
 # 驱动名
 #mysql.driver=com.mysql.cj.jdbc.Driver
 mysql.driver=com.mysql.jdbc.Driver
-# 数据库地址
-mysql.url=jdbc:mysql://47.98.211.175:3306/school?serverTimezone=UTC&useSSL=false
+# 数据库地址 127.0.0.1:3306
+mysql.url=jdbc:mysql://mysql:3306/school?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 # 用户名
 mysql.username=root
 # 密码
