--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,7 +1,6 @@
 # 驱动名
 mysql.driver=com.mysql.cj.jdbc.Driver
-#mysql.driver=com.mysql.jdbc.Driver
-# 数据库地址 127.0.0.1:3306
+# 本地数据库地址 127.0.0.1:3306
 mysql.url=jdbc:mysql://mysql:3306/school?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 # 用户名
 mysql.username=root
