--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.xpf.imoney</groupId>
     <artifactId>iMoney</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>war</packaging>
     <name>iMoney Maven Webapp</name>
     <url>https://maven.apache.org</url>
